<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_8dp">

    <TextView
        android:id="@+id/surprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/like_surprises"
        android:textColor="@color/text_color_black"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/send_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surprise"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/we_send_only_good_ones"
        android:textColor="@color/text_color_black"
        android:textSize="18dp" />

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_you"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_product"
        android:padding="@dimen/margin_4dp">

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_rectangle_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/rectangle"
            android:padding="4dp"
            android:text="@string/add_your_birth_day"

            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/dismiss"
        android:textColor="@color/dismiss_text_color"
        android:textSize="16dp" />
</RelativeLayout>
